--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -176,7 +176,6 @@ img {
 }
 
 .horizontal {
-  position: relative;
   display: flex;
   height: 100vh;
   gap: 2rem;
@@ -187,7 +186,7 @@ img {
 .horizontal__container {
   flex-shrink: 0;
   padding: 1rem;
-  height: 75%;
+  height: 79%;
   width: 30%;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border: 1.5px solid #fff;
@@ -222,17 +221,9 @@ img {
 }
 
 @media (max-width: 999px) {
-  .horizontal {
-    flex-direction: column;
-    height: auto;
-    padding-block: 2rem;
-  }
   .horizontal__container {
     width: 80%;
-    height: auto;
-  }
-  .horizontal__container:nth-child(1) {
-    margin-inline-start: 0;
+    height: 550px;
   }
   .scrollContent {
     margin-block-start: 30px;
