--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -139,8 +139,7 @@ img {
 
 // Horizontal-Scroll
 .horizontal {
-    position: relative;
-    display: flex;
+        display: flex;
     height: 100vh;
     gap: 2rem;
     background-color: #09557e;
@@ -149,7 +148,7 @@ img {
     &__container {
         flex-shrink: 0;
         padding: 1rem;
-        height: 75%;
+        height: 79%;
         width: 30%;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         border: 1.5px solid #fff;
@@ -185,17 +184,10 @@ img {
 }
 
 @media (max-width: 999px) {
-    .horizontal {
-        flex-direction: column;
-        height: auto;
-        padding-block: 2rem;
-    }
     .horizontal__container {
         width: 80%;
-        height: auto;
-        &:nth-child(1) {
-            margin-inline-start: 0;
-        }
+        height: 550px;  
+
     }
     .scrollContent{
         margin-block-start: 30px;
